--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
   trigger-deploy:
     runs-on: ubuntu-latest
     needs: [test]
-    if: github.ref == 'ref/heads/master'
+    if: github.ref == 'refs/heads/master'
     steps:
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
