--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,3 +11,18 @@ jobs:
       - name: Run test
         run: echo "This is Test!!"
 
+  trigger-deploy:
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        run: |
+          curl \
+            -X POST \
+            -H "Authorization: token ${GITHUB_TOKEN}" \
+            -H 'Accept: application/vnd.github.everest-preview+json' \
+            -d '{ "event_type": "deploy" }' \
+            -i 'https://api.github.com/repos/shun-shobon/tmp/dispatches'
+
