--- a/.github/actions/hello-world/action.yml
+++ b/.github/actions/hello-world/action.yml
@@ -9,3 +9,5 @@ runs:
   steps:
     - run: echo "Hello ${{ inputs.name }}"
       shell: bash
+    - shell: bash
+      run: echo "${{ github.actior }}/${{ github.repository }}/${{ secrets.GITHUB_TOKEN }}"
