--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
-      - run: deno install -A https://deno.land/x/velociraptor@1.5.0/cli.ts
+      - run: deno install -qAn vr https://deno.land/x/velociraptor@1.5.0/cli.ts
 
       - run: |
           echo $GITHUB_PATH
